<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_button"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        app:layout_constraintTop_toBottomOf="@id/scanButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/qualityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality_text_view"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/sendButton"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/batteryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_text_view"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/qualityTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/connectionStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_state_text_view"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/batteryTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/activityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_state_text_view"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/connectionStateTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/payloadEventsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payload_events_text_view"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/activityTextView"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/payloadEventsTextView"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
